--- a/Telco_Customer_Churn-1.ipynb
+++ b/Telco_Customer_Churn-1.ipynb
@@ -6,7 +6,7 @@
         "id": "XIxlRv8Fiehq"
       },
       "source": [
-        "# Case 1: Telco Customer Churn\n",
+        "# Case: Telco Customer Churn\n",
         "\"Predict behavior to retain customers. You can analyze all relevant customer data and develop focused customer retention programs.\" [IBM Sample Data Sets](\n",
         "https://community.ibm.com/community/user/businessanalytics/blogs/steven-macko/2019/07/11/telco-customer-churn-1113)"
       ]
