--- a/Telco_Customer_Churn-1.ipynb
+++ b/Telco_Customer_Churn-1.ipynb
@@ -296,7 +296,7 @@
         "id": "zfWjzKKMDbuh"
       },
       "source": [
-        "#### 1.a. Determine the shape of the data."
+        "#### To Determine the shape of the data."
       ]
     },
     {
@@ -332,7 +332,7 @@
         "id": "NMCjFWKSwVkU"
       },
       "source": [
-        "#### 1.b. What do the numbers ```(3333, 21)``` tell you?\n",
+        "#### These numbers ```(3333, 21)``` explains you about \n",
         "There are 3333 rows and 21 columns in the data frame."
       ]
     },
@@ -342,7 +342,7 @@
         "id": "wCkqc7deEgyP"
       },
       "source": [
-        "#### 1.c. Deterimine whether or not there are any missing values."
+        "#### To deterimine whether or not there are any missing values."
       ]
     },
     {
@@ -399,7 +399,7 @@
         "id": "CQi6Wq2iE5Pq"
       },
       "source": [
-        "#### 1.d. Determine the count of each of the Churn  (target variable) categories ('yes', 'no'). Use the ```value_counts()``` method."
+        "#### To determine the count of each of the Churn  (target variable) categories ('yes', 'no'). Use the ```value_counts()``` method."
       ]
     },
     {
@@ -439,7 +439,7 @@
         "id": "il3OiA_3FfUJ"
       },
       "source": [
-        "#### 1.e. Create a histogram of the 'Account_Length'. Use the Seaborn `distplot()` method."
+        "#### To Create a histogram of the 'Account_Length'. Use the Seaborn `distplot()` method."
       ]
     },
     {
@@ -487,7 +487,7 @@
         "id": "PljI17WGFtm4"
       },
       "source": [
-        "#### 1.f. Create a boxplot of the Account_Length by Churn status."
+        "#### To Create a boxplot of the Account_Length by Churn status."
       ]
     },
     {
@@ -533,7 +533,7 @@
         "id": "noppcRaawGuV"
       },
       "source": [
-        "### 1.g. Describe any patterns in Churn based on tenure.\n",
+        "### To Describe any patterns in Churn based on tenure.\n",
         "There's significantly more plot points above 200 for the no's than for yes's.\n",
         "\n",
         "\n",
@@ -563,7 +563,7 @@
         "id": "WPaqw1onGxp9"
       },
       "source": [
-        "#### 2.a. Determine the data types for all of the variables in the telco data set. Use the `dtypes` attribute."
+        "#### to Determine the data types for all of the variables in the telco data set. Use the `dtypes` attribute."
       ]
     },
     {
